<resources>
    <string name="app_name">Demotivate me</string>
    <string name="action_settings">Settings</string>

    <string name="rb_camera">Camera</string>
    <string name="rb_gallery">Gallery</string>
    <string name="select_image">Tap to select an image</string>
    <string name="select_image_camera">Tap to open camera</string>
    <string name="select_image_gallery">Tap to open gallery</string>
    <string name="action_share">Share</string>
    <string name="action_open">Open</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="action_view">View</string>
    <string name="action_delete">Delete</string>
    <string name="action_clear">Clear</string>
    <string name="preview">Preview</string>
    <string name="dialog_filename_title">Enter file name:</string>
    <string name="error_file_exists_overwrite">File already exists, overwrite?</string>
    <string name="error_storage_not_ready">Error. Storage is not ready.</string>
    <string name="error_directory_not_created">Error. Failed to create directory</string>
    <string name="dialog_delete_confirm_message">Are you really want to delete this file?</string>
    <string name="dem_large_text">Large text goes here</string>
    <string name="dem_small_text">Small text goes here</string>
    <string name="status_saved">Saved successfully</string>
    <string name="tab_constructor_title">Constructor</string>
    <string name="tab_collection_title">My collection</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="error_file_not_saved">Error, file not saved :(</string>
    <string name="share_message">Create your unique demotivator with http://bit.ly/1m3YagW \n #demotivateme #demotivator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="tab_preview_title">Preview</string>
    <string name="no_app_resolved">You don`t have any app to perform this action</string>
    <string name="permission_denied">Can`t perform this action, permission denied</string>
    <string name="message_rationale">This permission is needed to store your awesome demotivators</string>
    <string name="on_never_ask">You permanently declined this permission, you can enable it in application settings</string>
    <string name="empty_list">You didn`t save anything yet :(</string>
    <string name="tab_title_ads">Ads</string>
    <string name="watch_a_video_50_karma">Watch a video (+50 karma)</string>
    <string name="watch_a_simple_ad_5_karma">Watch a simple ad (+5 karma)</string>
    <string name="full_screen_ad_every_2nd_demotivator_saved">Simple ad (every 2nd demotivator saved)</string>
    <string name="watch_a_video_once_a_day">Watch a video (once a day)</string>
    <string name="choose_your_ad_type">Choose your ad type</string>
    <string name="help_this_project">Help this project</string>
    <string name="you_can_help_this_project_by_watching_an_ad">You can help this project by watching an ad</string>

</resources>
