<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayout3">

    <Button
        android:text="@string/watch_a_video_50_karma"
        android:layout_width="228dp"
        android:layout_height="57dp"
        android:id="@+id/btn_video"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintLeft_toLeftOf="@+id/btn_intertestial"
        app:layout_constraintTop_toBottomOf="@+id/btn_intertestial"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/btn_intertestial"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.0"/>

    <Button
        android:text="@string/watch_a_simple_ad_5_karma"
        android:layout_width="229dp"
        android:layout_height="59dp"
        android:id="@+id/btn_intertestial"
        tools:text="Watch a simple ad (+5 karma)"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout3"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ads_help_description"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout3"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.0"/>

    <RadioGroup
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout3"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ads_tw_caption"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout3"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.060000002">

        <RadioButton
            android:text="@string/full_screen_ad_every_2nd_demotivator_saved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ads_rb_fullscreen"
            tools:text="Full-screen ad (every 2nd demotivator saved)"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            android:checked="true"/>

        <RadioButton
            android:text="@string/watch_a_video_once_a_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ads_rb_video"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="33dp"
            tools:text="Watch a video (once a day)"/>
    </RadioGroup>

    <TextView
        android:text="@string/choose_your_ad_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ads_tw_caption"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:gravity="center_horizontal"
        tools:text="Choose your ad type"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout3"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout3"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout3"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.04000002"/>

    <TextView
        android:text="@string/help_this_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ads_help_caption"
        tools:text="Help this project"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout3"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout3"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.13"/>

    <TextView
        android:text="@string/you_can_help_this_project_by_watching_an_ad"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:id="@+id/ads_help_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout3"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ads_help_caption"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout3"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
        android:layout_marginBottom="16dp"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintVertical_bias="0.060000002"/>
</android.support.constraint.ConstraintLayout>