<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:id="@+id/constructor_scroll"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:id="@+id/constructor_rotate_left"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:tint="@color/colorPrimary"
        android:src="@drawable/ic_action_goleft"
        android:layout_weight="1"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@+id/constructor_frame"
        app:layout_constraintTop_toBottomOf="@+id/constructor_rotate_right"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/constructor_scroll"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/constructor_frame"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.43"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/constructor_rotate_right"
        android:tint="@color/colorPrimary"
        android:src="@drawable/ic_action_goright"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@+id/constructor_frame"
        app:layout_constraintTop_toTopOf="@+id/constructor_frame"
        app:layout_constraintRight_toRightOf="@+id/constructor_scroll"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/constructor_frame"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintVertical_bias="0.26"/>

    <RadioGroup
        android:id="@+id/constructor_radiogroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="@+id/constructor_scroll"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/constructor_scroll"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/constructor_scroll"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/constructor_rb_gallery"
            android:text="@string/rb_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="0dp"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/constructor_rb_camera"
            android:text="@string/rb_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="173dp"
            tools:layout_editor_absoluteY="0dp"/>

    </RadioGroup>


    <LinearLayout
        android:id="@+id/constructor_rotate_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="@+id/constructor_scroll"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/constructor_frame"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/constructor_scroll"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/view"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/constructor_scroll"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/constructor_rotate_ll"
        android:layout_marginTop="15dp"
        app:layout_constraintRight_toRightOf="@+id/constructor_scroll"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/constructor_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:hint="@string/dem_large_text"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:nextFocusDown="@+id/constructor_text"
            android:singleLine="true"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="11dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/view2"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="30dp"
        android:weightSum="1"
        app:layout_constraintLeft_toLeftOf="@+id/constructor_scroll"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/constructor_scroll"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/constructor_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/dem_small_text"
            android:gravity="center_horizontal"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:singleLine="true"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="11dp"/>
    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:id="@+id/constructor_frame"
        android:layout_width="167dp"
        android:layout_height="258dp"
        app:layout_constraintLeft_toLeftOf="@+id/constructor_scroll"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/constructor_radiogroup"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="@+id/constructor_scroll"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="0.0">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image_gallery"
            android:id="@+id/constructor_select_image_text"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingRight="@dimen/select_image_padding"
            android:paddingLeft="@dimen/select_image_padding"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="120dp"/>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/constructor_image"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:contentDescription="@string/select_image"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="129dp"/>

    </FrameLayout>


</android.support.constraint.ConstraintLayout>